# rust-os

./: Cargo.toml  READE.md
.cargo/: config.toml
docs/: 01-freestanding-rust-binary.md
src/: main.rs  vga_buffer.rs
