[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"

# 使用`cargo build`编译时需要的配置
[profile.dev]
panic = "abort" # 禁用panic时栈展开

# 使用`cargo build --release`编译时需要的配置
[profile.release]
panic = "abort" # 禁用panic时栈展开

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"  # 易失性操作
spin = "0.9.8"      # 自旋锁

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
